packages/opencode-plugin-manager/src/output/snapshots/ocp__output__json__tests__snapshot_empty_outdated_json_all_empty.snap
---
source: src/output/json.rs
assertion_line: 300
expression: "&pretty"
---
{
  "current": [],
  "outdated": [],
  "unresolved": []
}
