packages/opencode-plugin-manager/src/output/snapshots/ocp__output__json__tests__snapshot_outdated_json_all_sections.snap
---
source: src/output/json.rs
assertion_line: 291
expression: "&pretty"
---
{
  "current": [
    {
      "configPath": "/tmp/opencode.json",
      "declaredOpenCodeRange": null,
      "description": "",
      "displayName": "Beta",
      "installStatus": "installed",
      "installed": true,
      "installedVersion": "2.0.0",
      "latestDeclaredOpenCodeRange": null,
      "latestVersion": "2.0.0",
      "packageName": "beta",
      "requestedSpec": "beta@latest",
      "scope": "project",
      "status": "current"
    }
  ],
  "outdated": [
    {
      "configPath": "/tmp/opencode.json",
      "declaredOpenCodeRange": null,
      "description": "",
      "displayName": "Alpha",
      "installStatus": "installed",
      "installed": true,
      "installedVersion": "1.0.0",
      "latestDeclaredOpenCodeRange": null,
      "latestVersion": "2.0.0",
      "packageName": "alpha",
      "requestedSpec": "alpha@latest",
      "scope": "project",
      "status": "outdated"
    }
  ],
  "unresolved": [
    {
      "configPath": "/tmp/opencode.json",
      "declaredOpenCodeRange": null,
      "description": "",
      "displayName": "Gamma",
      "installStatus": "missing_install",
      "installed": false,
      "installedVersion": null,
      "latestDeclaredOpenCodeRange": null,
      "latestVersion": null,
      "packageName": "gamma",
      "requestedSpec": "gamma@latest",
      "scope": "project",
      "status": "unresolved"
    }
  ]
}
