packages/opencode-plugin-manager/src/output/snapshots/ocp__output__json__tests__snapshot_single_installed_plugin_json_shape.snap
---
source: src/output/json.rs
assertion_line: 216
expression: "&pretty"
---
{
  "plugins": [
    {
      "configPath": "/tmp/opencode.json",
      "declaredOpenCodeRange": ">=1.15.3",
      "description": "description",
      "displayName": "Display Name",
      "installed": true,
      "installedVersion": "1.2.3",
      "latestDeclaredOpenCodeRange": null,
      "latestVersion": null,
      "packageName": "my-plugin",
      "requestedSpec": "my-plugin@latest",
      "scope": "project",
      "status": "installed"
    }
  ]
}
